# xertica_challenge

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHALLENGE.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  judge_report_20260328_182252.md  judge_report_20260329_115932.md  judge_report_20260329_140601.md  judge_report_20260329_162506.md  judge_report_20260329_162559.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/compliance_agent/: apps.py  bootstrap.py
backend/compliance_agent/agents/: base.py  decision_agent.py  investigador.py  risk_analyzer.py
backend/compliance_agent/api/: dependencies.py  main.py
backend/tests/: conftest.py
compliance_agent/agents/: __init__.py  decision_agent.py  investigador.py  risk_analyzer.py
compliance_agent/api/: dependencies.py  main.py
compliance_agent/graph/: state.py
compliance_agent/migrations/: 0001_initial.py  0002_remove_regulationdocument_related_articles_and_more.py
compliance_agent/models/: audit_log.py  investigation.py  regulation_document.py  risk_analysis.py
compliance_agent/observability/: __init__.py  langfuse_config.py
compliance_agent/rag/: __init__.py  graph_retriever.py  hybrid_retriever.py  indexer.py  sparse_retriever.py  sparse_vectorizer.py  vector_store.py
compliance_agent/repositories/: __init__.py  alert_repository.py  audit_log_repository.py  decision_repository.py  interfaces.py  investigation_repository.py  risk_analysis_repository.py
compliance_agent/services/: audit_service.py  pipeline_service.py
config/settings/: local.py  production.py
docs/: assumptions_and_architecture.md  cto_document.md  live_testing.md
notebooks/: rag_evaluation.ipynb
notebooks/.ipynb_checkpoints/: rag_evaluation-checkpoint.ipynb
scripts/: live_test.sh  live_test_render.py  llm_judge.py
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py
tests/integration/: test_api_alerts.py  test_pipeline.py
tests/unit/: test_models.py  test_pipeline_service.py  test_services.py
(+76 files in other folders)
