[project]
name = "assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "fastapi[standard]>=0.135.2",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
    "python-dotenv>=1.2.2",
]
